# SPT323

./: .gitignore  README.md
dependency_test/dependency_1/: Cargo.toml
dependency_test/dependency_2/: Cargo.toml
dependency_test/dependency_3/: Cargo.toml
dependency_test/dependency_template/: Cargo.toml
dependency_test/dependency_test/: Cargo.toml
dependency_test/dependency_test/src/: main.rs
hello_world/src/: main.rs
text_adventure_template/: Cargo.toml
text_adventure_template/assets/: Cargo.toml
text_adventure_template/assets/src/: game_manager.rs  lib.rs  save_system.rs  user_input.rs
text_adventure_template/commands/src/: lib.rs
text_adventure_template/enums/scenes/: Cargo.toml
text_adventure_template/event_system/: Cargo.toml
text_adventure_template/event_system/src/: events.rs  events_generated.rs  lib.rs
text_adventure_template/item_manager/: Cargo.toml
text_adventure_template/items/: Cargo.toml
text_adventure_template/items/item1/: Cargo.toml
text_adventure_template/items/item_id/: Cargo.toml
text_adventure_template/items/item_manager/: Cargo.toml
text_adventure_template/items/item_manager/src/: lib.rs
text_adventure_template/items/item_template/: Cargo.toml
text_adventure_template/main/: Cargo.toml
text_adventure_template/main/src/: command_manager.rs  game_manager.rs  main.rs  main_menu.rs  scene_loader.rs  scene_manager.rs
text_adventure_template/main/src/commands/: command_credits.rs  command_exit.rs  command_help.rs  command_left.rs  command_play.rs  command_profile.rs  command_right.rs  command_schemes.rs
text_adventure_template/save_system/: Cargo.toml
text_adventure_template/scene_manager/: Cargo.toml
text_adventure_template/scene_manager/src/: lib.rs
text_adventure_template/scene_template/: Cargo.toml
text_adventure_template/scene_util/: Cargo.toml
text_adventure_template/scenes/scene_manager/: Cargo.toml
text_adventure_template/scenes/scene_manager/src/: lib.rs
(+100 files in other folders)
