[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
scene_manager = {path = "../scenes/scene_manager"}
player_manager = {path = "../player/player_manager"}
item_manager = {path = "../items/item_manager"}
item_id = {path = "../items/item_id"}
scene_id = {path = "../scenes/scene_id"}