[package]
name = "item_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
item_template = {path = "../item_template"}
item_id = {path = "../item_id"}
item1 = {path = "../data/item1"}
item2 = {path = "../data/item2"}
item3 = {path = "../data/item3"}
item4 = {path = "../data/item4"}
item5 = {path = "../data/item5"}
